test/negative/auto_in_cast_target.cg
fn main() -> i32 {
    0 as auto
}

